Fix pushing content to the bottom when stretched and inverted.

--- a/src/stylesheets/comments.scss
+++ b/src/stylesheets/comments.scss
@@ -129,7 +129,7 @@
 }
 
 &.o-chat--stretch-vertical.o-chat--order-inverted {
-	.o-chat--comments-wrapper {
+	.o-chat--comments-area {
 		display: flex;
 
 		.o-chat--comments-container {
